--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,66 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Login</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      background: linear-gradient(135deg, #6B73FF 0%, #000DFF 100%);
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .card {
-      border: none;
-      border-radius: 1rem;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    }
-    .form-control:focus {
-      box-shadow: none;
-      border-color: #6B73FF;
-    }
-    .btn-primary {
-      background-color: #6B73FF;
-      border: none;
-    }
-    .btn-primary:hover {
-      background-color: #5a63d8;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-6 col-lg-4">
-        <div class="card p-4">
-          <div class="card-body">
-            <h3 class="card-title text-center mb-4">Login</h3>
-            <form>
-              <div class="mb-3">
-                <label for="email" class="form-label">Username</label>
-                <input type="" class="form-control" id="Username" placeholder="5 digit employee code">
-              </div>
-              <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password">
-              </div>
-              <div class="d-grid">
-                <button type="submit" id="submit-btn" class="btn btn-primary btn-lg">Sign In</button>
-              </div>
-            </form>
-            <hr class="my-4">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Bootstrap JS Bundle -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./index.js"></script>
-</body>
-</html>
 
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Login</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background: linear-gradient(135deg, #6B73FF 0%, #000DFF 100%);
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .card {
+            border: none;
+            border-radius: 1rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .form-control:focus {
+            box-shadow: none;
+            border-color: #6B73FF;
+        }
+
+        .btn-primary {
+            background-color: #6B73FF;
+            border: none;
+        }
+
+        .btn-primary:hover {
+            background-color: #5a63d8;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6 col-lg-4">
+                <div class="card p-4">
+                    <div class="card-body">
+                        <h3 class="card-title text-center mb-4">Login</h3>
+                        <form>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Username</label>
+                                <input type="" class="form-control" id="Username" placeholder="5 digit employee code">
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="password">
+                            </div>
+                            <div class="d-grid">
+                                <button type="submit" id="submit-btn" class="btn btn-primary btn-lg">Sign In</button>
+                            </div>
+                        </form>
+                        <hr class="my-4">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./login/login.js"></script>
+</body>
+
+</html>
