--- a/src/renderer/home/home.html
+++ b/src/renderer/home/home.html
@@ -33,13 +33,13 @@
                 <nav class="nav flex-column">
                     <a href="../vendor_quoting/vendor_quoting.html" target="app-frame"
                         class="nav-link text-white active">
-                        <img src="/assets/apps/vendor.png" alt="Vendor" width="20" class="me-2"> Vendor Quoting
+                        <img src="../assets/shop.svg" alt="Vendor" width="20" class="me-2"> Vendor Quoting
                     </a>
                     <a href="../vac_req/vacation.html" target="app-frame" class="nav-link text-white">
-                        <img src="/assets/apps/vacation.png" alt="Vacation" width="20" class="me-2"> Vacation Requests
+                        <img src="../assets/calendar.svg" alt="Vacation" width="20" class="me-2"> Vacation Requests
                     </a>
                     <a href="../qv_dash_access/quickview_access.html" target="app-frame" class="nav-link text-white">
-                        <img src="/assets/apps/vacation.png" alt="Quickview" width="20" class="me-2"> Quickview Access
+                        <img src="../assets/stats.svg" alt="Quickview" width="20" class="me-2"> Quickview Access
                     </a>
                 </nav>
             </div>
