--- a/src/renderer/qv_dash_access/quickview_access.html
+++ b/src/renderer/qv_dash_access/quickview_access.html
@@ -8,44 +8,45 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body class="bg-body text-body">
 
-    <div class="container my-4">
-        <!-- Page Heading -->
+<body class="bg-body text-body min-vh-100 d-flex flex-column">
+    <div class="container my-4 flex-fill d-flex flex-column"><!-- + d-flex flex-column -->
         <h2 class="text-center mb-4 fw-bold">Quick View Access</h2>
 
-        <div class="row g-4 mb-4">
-            <!-- Users -->
-            <div class="col-12 col-lg-4">
+        <div class="row g-4 mb-4 flex-grow-1"><!-- h-100 → flex-grow-1 -->
+            <div class="col-12 col-lg-4 d-flex flex-column">
                 <label class="fw-semibold mb-2">Select User</label>
                 <input type="search" class="form-control mb-2" id="searchUsers" placeholder="Search users…">
-                <select multiple class="form-select" size="12" id="users"></select>
+                <select multiple class="form-select flex-grow-1 overflow-auto" id="users"></select>
                 <div class="form-text">Tip: Ctrl/Cmd-click to multi-select.</div>
             </div>
 
-            <!-- Accessed Quick Views -->
-            <div class="col-12 col-lg-4">
+            <div class="col-12 col-lg-4 d-flex flex-column">
                 <label class="fw-semibold mb-2">Accessed Quick Views</label>
                 <input type="search" class="form-control mb-2" id="searchAccessedQV" placeholder="Search quick views…">
-                <select multiple class="form-select" size="12" id="accessedQuickViews"></select>
+                <select multiple class="form-select flex-grow-1 overflow-auto" id="accessedQuickViews">
+                    <option value="" selected>— Select a user —</option>
+                </select>
+                <div class="form-text">Tip: Ctrl/Cmd-click to multi-select.</div>
             </div>
 
-            <!-- Accessed Dashboards -->
-            <div class="col-12 col-lg-4">
+            <div class="col-12 col-lg-4 d-flex flex-column">
                 <label class="fw-semibold mb-2">Accessed Dashboards</label>
                 <input type="search" class="form-control mb-2" id="searchAccessedDB" placeholder="Search dashboards…">
-                <select multiple class="form-select" size="12" id="accessedDashboards"></select>
+                <select multiple class="form-select flex-grow-1 overflow-auto" id="accessedDashboards">
+                    <option value="" selected>— Select a user —</option>
+                </select>
+                <div class="form-text">Tip: Ctrl/Cmd-click to multi-select.</div>
             </div>
         </div>
 
-        <!-- Action buttons -->
+        <!-- Buttons stay below the row -->
         <div class="d-grid d-sm-flex gap-2">
-            <button class="btn btn-success" id="btnAdd" data-bs-toggle="modal" data-bs-target="#addModal">
-                Add
-            </button>
+            <button class="btn btn-success" id="btnAdd" data-bs-toggle="modal" data-bs-target="#addModal">Add</button>
             <button class="btn btn-outline-primary" id="btnRemove">Remove Access</button>
         </div>
     </div>
+
 
     <!-- Add Modal -->
     <div class="modal fade" id="addModal" tabindex="-1" aria-hidden="true">
@@ -60,13 +61,22 @@
                     <p class="mb-3">Select dashboards and quick views to grant to the selected user(s).</p>
 
                     <div class="row g-3">
+                        <!-- Dashboards -->
                         <div class="col-12 col-md-6">
                             <h6 class="fw-semibold">Dashboards</h6>
+                            <!-- Search box -->
+                            <input type="search" id="searchDashboards" class="form-control mb-2"
+                                placeholder="Search dashboards…">
                             <div id="dashboardsList" class="vstack gap-2 mt-2"
                                 style="max-height: 300px; overflow:auto;"></div>
                         </div>
+
+                        <!-- Quick Views -->
                         <div class="col-12 col-md-6">
                             <h6 class="fw-semibold">Quick Views</h6>
+                            <!-- Search box -->
+                            <input type="search" id="searchQuickViews" class="form-control mb-2"
+                                placeholder="Search quick views…">
                             <div id="quickViewsList" class="vstack gap-2 mt-2"
                                 style="max-height: 300px; overflow:auto;"></div>
                         </div>
@@ -81,8 +91,19 @@
         </div>
     </div>
 
+
+    <div class="modal fade" id="loadingModal" tabindex="-1" aria-hidden="true" data-bs-backdrop="static"
+        data-bs-keyboard="false">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="d-flex justify-content-center align-items-center w-100" style="height:100vh;">
+                <div class="spinner-border text-light" role="status" aria-hidden="true"></div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./access.js"></script>
+    <script type="module" src="./access.js"></script>
+    <script src="./filters.js"></script>
 
 </body>
 
