--- a/src/renderer/vac_req/vacation.html
+++ b/src/renderer/vac_req/vacation.html
@@ -61,6 +61,15 @@
     <!-- Floating Approve Button -->
     <button id="approve-btn" class="btn btn-primary" disabled>Approve</button>
 
+    <div class="modal fade" id="loadingModal" tabindex="-1" aria-hidden="true" data-bs-backdrop="static"
+        data-bs-keyboard="false">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="d-flex justify-content-center align-items-center w-100" style="height:100vh;">
+                <div class="spinner-border text-light" role="status" aria-hidden="true"></div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
