--- a/src/renderer/vac_req/vacation.html
+++ b/src/renderer/vac_req/vacation.html
@@ -61,6 +61,7 @@
     <!-- Floating Approve Button -->
     <button id="approve-btn" class="btn btn-primary" disabled>Approve</button>
 
+    <!-- Loading Modal -->
     <div class="modal fade" id="loadingModal" tabindex="-1" aria-hidden="true" data-bs-backdrop="static"
         data-bs-keyboard="false">
         <div class="modal-dialog modal-dialog-centered">
@@ -69,6 +70,29 @@
             </div>
         </div>
     </div>
+
+    <!-- Edit Reason Modal -->
+    <div class="modal fade" id="editReasonModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h6 class="modal-title">
+                        <span id="modalRequestId"></span> <span id="modalRequestName"></span> - Add Comment
+                    </h6>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body p-3">
+                    <textarea id="editReason" class="form-control mb-3" rows="4" placeholder="Comment"></textarea>
+                    <div class="d-flex justify-content-end gap-2">
+                        <button type="button" class="btn btn-outline-secondary btn-sm"
+                            data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary btn-sm" id="saveReasonBtn">Save</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 
