--- a/src/renderer/home/home.html
+++ b/src/renderer/home/home.html
@@ -7,10 +7,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
+    <style>
+        html,
+        body {
+            height: 100%;
+        }
+
+        body {
+            overflow: hidden;
+        }
+
+
+        :root {
+            --nav-h: 40px;
+        }
+
+
+        .app-shell {
+            height: calc(100vh - var(--nav-h));
+            overflow: hidden;
+        }
+
+        .sidebar-col {
+            overflow: auto;
+        }
+
+        .viewport-col {
+            overflow: hidden;
+        }
+
+        #app-frame {
+            display: block;
+            width: 100%;
+            height: 100%;
+            border: 0;
+        }
+    </style>
 </head>
 
-<body class="bg-dark text-white vh-100">
-
+<body class="bg-dark text-white vh-100" style="overflow:hidden;">
     <!-- Top Navbar -->
     <nav class="navbar navbar-dark bg-dark fixed-top py-1">
         <div class="container-fluid h-100 p-0">
@@ -23,10 +58,10 @@
     </nav>
 
     <!-- Sidebar + Content -->
-    <div class="container-fluid h-100">
-        <div class="row h-100 g-0" style="padding-top: 40px;">
+    <div class="container-fluid" style="height:calc(100vh - 40px); padding-top:40px;">
+        <div class="row h-100 g-0">
             <!-- Sidebar -->
-            <div class="col-3 col-lg-2 bg-secondary d-flex flex-column p-0">
+            <div class="col-3 col-lg-2 bg-secondary d-flex flex-column p-0" style="overflow:auto;">
                 <div class="p-3 border-bottom">
                     <h6 class="mb-0">Applications</h6>
                 </div>
@@ -45,9 +80,9 @@
             </div>
 
             <!-- Main Content -->
-            <div class="col-9 col-lg-10 p-0">
+            <div class="col-9 col-lg-10 p-0" style="overflow:hidden;">
                 <iframe id="app-frame" name="app-frame" src="vendor_quoting.html"
-                    class="w-100 h-100 border-0 bg-white"></iframe>
+                    style="width:100%; height:100%; border:0; display:block;" class="bg-white"></iframe>
             </div>
         </div>
     </div>
@@ -55,5 +90,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./home.js"></script>
 </body>
+
 
 </html>
