--- a/src/renderer/vac_req/vacation.html
+++ b/src/renderer/vac_req/vacation.html
@@ -5,29 +5,35 @@
     <meta charset="UTF-8">
     <title>Vendor Quoting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* Floating approve button at bottom right */
         #approve-btn {
             position: fixed;
             bottom: 20px;
             right: 20px;
             z-index: 1050;
-            /* above table/card */
+        }
+
+        #loadingOverlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 2000;
+        }
+
+        #loadingOverlay.d-none {
+            display: none;
         }
     </style>
 </head>
 
 <body>
-    <!-- Back to Home -->
-    <div class="container-fluid py-2 sticky-top bg-white border-bottom" style="z-index:1060;">
-        <!--<button class="btn btn-outline-secondary" onclick="window.location.href='home.html'">-->
-        <!--    &larr; Back to Home-->
-        <!--</button>-->
-    </div>
-
-
     <!-- Vacation Requests -->
     <div class="container-fluid py-3">
         <div class="card shadow-sm">
@@ -62,14 +68,12 @@
     <button id="approve-btn" class="btn btn-primary" disabled>Approve</button>
 
     <!-- Loading Modal -->
-    <div class="modal fade" id="loadingModal" tabindex="-1" aria-hidden="true" data-bs-backdrop="static"
-        data-bs-keyboard="false">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="d-flex justify-content-center align-items-center w-100" style="height:100vh;">
-                <div class="spinner-border text-light" role="status" aria-hidden="true"></div>
-            </div>
+    <div class="d-flex justify-content-center" id="loadingOverlay">
+        <div class="spinner-border" role="status">
+            <span class="sr-only"></span>
         </div>
     </div>
+
 
     <!-- Edit Reason Modal -->
     <div class="modal fade" id="editReasonModal" tabindex="-1" aria-hidden="true">
