--- a/src/renderer/qv_dash_access/quickview_access.html
+++ b/src/renderer/qv_dash_access/quickview_access.html
@@ -6,6 +6,24 @@
     <title>Quick View Access</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        #loadingOverlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 2000;
+        }
+
+        #loadingOverlay.d-none {
+            display: none;
+        }
+    </style>
 </head>
 
 
@@ -91,15 +109,13 @@
         </div>
     </div>
 
-
-    <div class="modal fade" id="loadingModal" tabindex="-1" aria-hidden="true" data-bs-backdrop="static"
-        data-bs-keyboard="false">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="d-flex justify-content-center align-items-center w-100" style="height:100vh;">
-                <div class="spinner-border text-light" role="status" aria-hidden="true"></div>
-            </div>
+    <!-- Loading Modal -->
+    <div class="d-flex justify-content-center" id="loadingOverlay">
+        <div class="spinner-border" role="status">
+            <span class="sr-only"></span>
         </div>
     </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="./access.js"></script>
