--- a/src/renderer/vendor_quoting/vendor_quoting.html
+++ b/src/renderer/vendor_quoting/vendor_quoting.html
@@ -88,70 +88,22 @@
                 </div>
 
                 <div class="mt-auto">
-                    <button type="button" class="btn btn-primary w-100" id="send-mail-button">Send Email</button>
+                    <button type="button" class="btn btn-primary w-100" id="send-mail-button">Next</button>
                 </div>
             </div>
         </form>
     </div>
 
-    <!-- MODAL (unchanged) -->
     <div class="modal fade" id="rfqRecipientsModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-xl">
-            <div class="modal-content glass-card">
-                <div class="modal-header">
-                    <div>
-                        <h5 class="modal-title">Send for Quote</h5>
-                        <div class="subtle">RFQ #<strong id="rfq-number">—</strong> • <span id="section-count">0</span>
-                            sections</div>
-                    </div>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-
-                <div class="modal-body">
-                    <div class="row g-3">
-                        <div class="col-12 col-md-6 col-lg-8">
-                            <div id="rfq-sections"></div>
-                        </div>
-                        <div class="col-12 col-md-6 col-lg-4">
-                            <div class="card h-100">
-                                <div class="card-body">
-                                    <div class="d-flex align-items-center justify-content-between mb-2">
-                                        <h6 class="mb-0">Recipients by Category</h6>
-                                    </div>
-
-                                    <label class="form-label small text-muted">Category</label>
-                                    <select id="email-category-select" class="form-select form-select-sm mb-3"></select>
-
-                                    <ul id="email-list" class="list-group mb-3"></ul>
-
-                                    <div class="input-group input-group-sm">
-                                        <input id="email-input" type="email" class="form-control"
-                                            placeholder="name@example.com" />
-                                        <button id="email-add-btn" class="btn btn-primary">Add</button>
-                                    </div>
-                                    <div id="email-hint" class="form-text mt-1 text-muted"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="modal-footer d-flex justify-content-between">
-                    <div class="subtle">
-                        <i class="bi bi-info-circle"></i>
-                        Review items and recipients per sub-category before sending.
-                    </div>
-                    <div class="d-flex gap-2">
-                        <button class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
-                        <button class="btn btn-primary"><i class="bi bi-send me-1"></i> Send RFQs</button>
-                    </div>
-                </div>
-            </div>
+            <!-- React mounts here -->
+            <div class="modal-content"></div>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="./vq_main.js"></script>
+    <script type="module" src="./send_handler.js"></script>
 </body>
 
 </html>
