rfq_gen front end layout complete

--- a/src/renderer/home/home.html
+++ b/src/renderer/home/home.html
@@ -76,6 +76,9 @@
                     <a href="../qv_dash_access/quickview_access.html" target="app-frame" class="nav-link text-white">
                         <img src="../assets/stats.svg" alt="Quickview" width="20" class="me-2"> Quickview Access
                     </a>
+                    <a href="../rfq_gen/rfq_gen.html" target="app-frame" class="nav-link text-white">
+                        <img src="../assets/stats.svg" alt="Quickview" width="20" class="me-2">RFQ Gen
+                    </a>
                 </nav>
             </div>
 
