--- a/src/renderer/vendor_quoting/vendor_quoting.html
+++ b/src/renderer/vendor_quoting/vendor_quoting.html
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="mt-auto">
-                    <button type="button" class="btn btn-primary w-100" id="send-mail-button">Next</button>
+                    <button type="button" class="btn btn-primary w-100" id="open-preview-modal">Next</button>
                 </div>
             </div>
         </form>
