boeing script integration

--- a/src/renderer/vendor_quoting/vendor_quoting.html
+++ b/src/renderer/vendor_quoting/vendor_quoting.html
@@ -90,6 +90,10 @@
                 <div class="mt-auto">
                     <button type="button" class="btn btn-primary w-100" id="open-preview-modal">Next</button>
                 </div>
+                
+                <div class="mt-2">
+                    <button type="button" class="btn btn-sm btn-outline-primary" id="btn-boeing-finish">Boeing finish codes</button>
+                </div>
             </div>
         </form>
     </div>
@@ -104,6 +108,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="./vq_main.js"></script>
     <script type="module" src="./send_handler.js"></script>
+    <script type="module" src="./wiring/boeing_finish_button.js"></script>
 </body>
 
 </html>
