--- a/src/renderer/home/home.html
+++ b/src/renderer/home/home.html
@@ -66,8 +66,7 @@
                     <h6 class="mb-0">Applications</h6>
                 </div>
                 <nav class="nav flex-column">
-                    <a href="../vendor_quoting/vendor_quoting.html" target="app-frame"
-                        class="nav-link text-white active">
+                    <a href="#" data-app="vendor-quoting" class="nav-link text-white active">
                         <img src="../assets/shop.svg" alt="Vendor" width="20" class="me-2"> Vendor Quoting
                     </a>
                     <a href="../vac_req/vacation.html" target="app-frame" class="nav-link text-white">
@@ -83,14 +82,16 @@
             </div>
 
             <!-- Main Content -->
-            <div class="col-9 col-lg-10 p-0" style="overflow:hidden;">
-                <iframe id="app-frame" name="app-frame" src="vendor_quoting.html"
-                    style="width:100%; height:100%; border:0; display:block;" class="bg-white"></iframe>
+            <div class="col-9 col-lg-10 p-0" style="overflow:hidden;" id="main-content">
+                <div id="vendor-quoting-root" style="width:100%; height:100%; display:block;" class="bg-white"></div>
+                <iframe id="app-frame" name="app-frame" src=""
+                    style="width:100%; height:100%; border:0; display:none;" class="bg-white"></iframe>
             </div>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="../vendor_quoting/App.js"></script>
     <script src="./home.js"></script>
 </body>
 
