--- a/src/renderer/home/home.html
+++ b/src/renderer/home/home.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Home - Applications</title>
+    <title>Auto Gen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
@@ -19,13 +19,91 @@
 
 
         :root {
-            --nav-h: 40px;
+            --title-bar-h: 32px;
         }
 
 
         .app-shell {
-            height: calc(100vh - var(--nav-h));
+            height: calc(100vh - var(--title-bar-h));
             overflow: hidden;
+        }
+
+        /* Draggable Title Bar */
+        .title-bar {
+            height: var(--title-bar-h);
+            background: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
+            border-bottom: 1px solid #333;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 1rem;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1000;
+            -webkit-app-region: drag;
+            user-select: none;
+        }
+
+        .title-bar-content {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            -webkit-app-region: no-drag;
+        }
+
+        .title-bar-left {
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
+            color: #ffffff;
+            font-size: 0.875rem;
+            font-weight: 500;
+        }
+
+        .title-bar-right {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            margin-right: 140px; /* Space for window controls */
+        }
+
+        .user-info {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            color: #e0e0e0;
+            font-size: 0.8rem;
+        }
+
+        .user-avatar {
+            width: 20px;
+            height: 20px;
+            background: linear-gradient(135deg, #1976d2 0%, #1565c0 100%);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 0.7rem;
+            font-weight: 600;
+        }
+
+        .title-bar-button {
+            background: transparent;
+            border: none;
+            color: #e0e0e0;
+            font-size: 0.75rem;
+            padding: 0.25rem 0.5rem;
+            border-radius: 4px;
+            transition: all 0.2s ease;
+            cursor: pointer;
+        }
+
+        .title-bar-button:hover {
+            background: rgba(255,255,255,0.1);
+            color: white;
         }
 
         .sidebar-col {
@@ -91,19 +169,31 @@
 </head>
 
 <body class="bg-dark text-white vh-100" style="overflow:hidden;">
-    <!-- Top Navbar -->
-    <nav class="navbar navbar-dark bg-dark fixed-top py-1">
-        <div class="container-fluid h-100 p-0">
-            <a class="navbar-brand ms-1" href="#">My Applications</a>
-            <div class="ms-auto d-flex align-items-center gap-3">
-                <span class="navbar-text">Logged in as <strong>User</strong></span>
-                <button class="btn btn-outline-light btn-sm">Logout</button>
+    <!-- Draggable Title Bar -->
+    <div class="title-bar">
+        <div class="title-bar-left">
+            <div style="width: 20px; height: 20px; background: rgba(25,118,210,0.2); border-radius: 50%; display: flex; align-items: center; justify-content: center;">
+                <i class="bi bi-grid-3x3-gap-fill" style="color: #1976d2; font-size: 0.7rem;"></i>
             </div>
+            <span>Auto Gen</span>
         </div>
-    </nav>
+        
+        <div class="title-bar-right">
+            <div class="user-info">
+                <div class="user-avatar">
+                    <i class="bi bi-person-fill"></i>
+                </div>
+                <span>User</span>
+            </div>
+            <button class="title-bar-button" onclick="logout()">
+                <i class="bi bi-box-arrow-right me-1"></i>
+                Logout
+            </button>
+        </div>
+    </div>
 
     <!-- Sidebar + Content -->
-    <div style="height:calc(100vh - 40px); padding-top:40px; margin: 0; padding-left: 0; padding-right: 0;">
+    <div style="height:calc(100vh - var(--title-bar-h)); padding-top:var(--title-bar-h); margin: 0; padding-left: 0; padding-right: 0;">
         <div class="row h-100 g-0" style="margin: 0;">
             <!-- Material Design Sidebar -->
             <div class="col-3 col-lg-2 d-flex flex-column p-0" style="background: #475569; box-shadow: 2px 0 8px rgba(0,0,0,0.15); overflow:auto; position: relative;">
@@ -113,7 +203,7 @@
                         <div style="width: 16px; height: 16px; background: rgba(25,118,210,0.2); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 0.5rem;">
                             <i class="bi bi-grid-3x3-gap-fill" style="color: #1976d2; font-size: 0.6rem;"></i>
                         </div>
-                        <small class="mb-0 text-white fw-bold" style="font-size: 0.65rem; text-transform: uppercase; letter-spacing: 0.5px; line-height: 1;">Applications</small>
+                        <small class="mb-0 text-white fw-bold" style="font-size: 0.65rem; text-transform: uppercase; letter-spacing: 0.5px; line-height: 1;">Modules</small>
                     </div>
                 </div>
                 
