--- a/src/renderer/home/home.html
+++ b/src/renderer/home/home.html
@@ -128,8 +128,9 @@
             border-left: 3px solid rgba(25,118,210,0.5) !important;
         }
 
-        .material-nav-item:hover:not(.active) img {
-            opacity: 0.9 !important;
+        .material-nav-item:hover:not(.active) i {
+            color: rgba(255,255,255,0.95) !important;
+            transform: scale(1.1);
         }
 
         .material-nav-item.active {
@@ -139,8 +140,9 @@
             font-weight: 500 !important;
         }
 
-        .material-nav-item.active img {
-            opacity: 0.9 !important;
+        .material-nav-item.active i {
+            color: #64b5f6 !important;
+            transform: scale(1.05);
         }
 
         /* Ensure inactive items have proper styling */
@@ -151,8 +153,9 @@
             font-weight: 400 !important;
         }
 
-        .material-nav-item:not(.active) img {
-            opacity: 0.7 !important;
+        .material-nav-item:not(.active) i {
+            color: rgba(255,255,255,0.7) !important;
+            transition: all 0.2s ease;
         }
 
         /* Ensure no gutters */
@@ -210,19 +213,19 @@
                 <!-- Navigation Items -->
                 <nav class="nav flex-column" style="padding: 0.5rem 0;">
                     <a href="#" data-app="vendor-quoting" class="material-nav-item active" style="display: flex; align-items: center; padding: 0.75rem 1.5rem; text-decoration: none; transition: all 0.2s ease;">
-                        <img src="../assets/shop.svg" alt="Vendor" width="20" class="me-3"> 
+                        <i class="bi bi-briefcase-fill me-3" style="font-size: 1.1rem; width: 20px; text-align: center;"></i>
                         <span>Vendor Quoting</span>
                     </a>
-                    <a href="../vac_req/vacation.html" target="app-frame" class="material-nav-item" style="display: flex; align-items: center; padding: 0.75rem 1.5rem; text-decoration: none; transition: all 0.2s ease;">
-                        <img src="../assets/calendar.svg" alt="Vacation" width="20" class="me-3"> 
+                    <a href="#" data-app="vacation" class="material-nav-item" style="display: flex; align-items: center; padding: 0.75rem 1.5rem; text-decoration: none; transition: all 0.2s ease;">
+                        <i class="bi bi-calendar-check me-3" style="font-size: 1.1rem; width: 20px; text-align: center;"></i>
                         <span>Vacation Requests</span>
                     </a>
                     <a href="../qv_dash_access/quickview_access.html" target="app-frame" class="material-nav-item" style="display: flex; align-items: center; padding: 0.75rem 1.5rem; text-decoration: none; transition: all 0.2s ease;">
-                        <img src="../assets/stats.svg" alt="Quickview" width="20" class="me-3"> 
+                        <i class="bi bi-graph-up me-3" style="font-size: 1.1rem; width: 20px; text-align: center;"></i>
                         <span>Quickview Access</span>
                     </a>
                     <a href="../rfq_gen/rfq_gen.html" target="app-frame" class="material-nav-item" style="display: flex; align-items: center; padding: 0.75rem 1.5rem; text-decoration: none; transition: all 0.2s ease;">
-                        <img src="../assets/stats.svg" alt="Quickview" width="20" class="me-3">
+                        <i class="bi bi-file-earmark-text me-3" style="font-size: 1.1rem; width: 20px; text-align: center;"></i>
                         <span>RFQ Gen</span>
                     </a>
                 </nav>
@@ -231,6 +234,7 @@
             <!-- Main Content -->
             <div class="col-9 col-lg-10 p-0" style="overflow:hidden;" id="main-content">
                 <div id="vendor-quoting-root" style="width:100%; height:100%; display:block;" class="bg-white"></div>
+                <div id="vacation-root" style="width:100%; height:100%; display:none;" class="bg-white"></div>
                 <iframe id="app-frame" name="app-frame" src=""
                     style="width:100%; height:100%; border:0; display:none;" class="bg-white"></iframe>
             </div>
@@ -239,6 +243,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="../vendor_quoting/App.js"></script>
+    <script type="module" src="../vacation/VacationApp.js"></script>
     <script src="./home.js"></script>
 </body>
 
