--- a/src/renderer/home/home.html
+++ b/src/renderer/home/home.html
@@ -224,7 +224,7 @@
                         <i class="bi bi-graph-up me-3" style="font-size: 1.1rem; width: 20px; text-align: center;"></i>
                         <span>Quickview Access</span>
                     </a>
-                    <a href="../rfq_gen/rfq_gen.html" target="app-frame" class="material-nav-item" style="display: flex; align-items: center; padding: 0.75rem 1.5rem; text-decoration: none; transition: all 0.2s ease;">
+                    <a href="#" data-app="rfq-gen" class="material-nav-item" style="display: flex; align-items: center; padding: 0.75rem 1.5rem; text-decoration: none; transition: all 0.2s ease;">
                         <i class="bi bi-file-earmark-text me-3" style="font-size: 1.1rem; width: 20px; text-align: center;"></i>
                         <span>RFQ Gen</span>
                     </a>
@@ -235,6 +235,7 @@
             <div class="col-9 col-lg-10 p-0" style="overflow:hidden;" id="main-content">
                 <div id="vendor-quoting-root" style="width:100%; height:100%; display:block;" class="bg-white"></div>
                 <div id="vacation-root" style="width:100%; height:100%; display:none;" class="bg-white"></div>
+                <div id="rfq-gen-root" style="width:100%; height:100%; display:none; background-color: #f8f9fa; color: #212529; overflow-y: auto;"></div>
                 <iframe id="app-frame" name="app-frame" src=""
                     style="width:100%; height:100%; border:0; display:none;" class="bg-white"></iframe>
             </div>
@@ -242,8 +243,10 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
     <script type="module" src="../vendor_quoting/App.js"></script>
     <script type="module" src="../vacation/VacationApp.js"></script>
+    <script type="module" src="../rfq_gen/main.js"></script>
     <script src="./home.js"></script>
 </body>
 
