--- a/src/renderer/home/home.html
+++ b/src/renderer/home/home.html
@@ -228,6 +228,10 @@
                         <i class="bi bi-file-earmark-text me-3" style="font-size: 1.1rem; width: 20px; text-align: center;"></i>
                         <span>RFQ Gen</span>
                     </a>
+                    <a href="#" data-app="admin-panel" class="material-nav-item" style="display: flex; align-items: center; padding: 0.75rem 1.5rem; text-decoration: none; transition: all 0.2s ease;">
+                        <i class="bi bi-terminal-fill me-3" style="font-size: 1.1rem; width: 20px; text-align: center;"></i>
+                        <span>Admin Panel</span>
+                    </a>
                 </nav>
             </div>
 
@@ -236,6 +240,7 @@
                 <div id="vendor-quoting-root" style="width:100%; height:100%; display:block;" class="bg-white"></div>
                 <div id="vacation-root" style="width:100%; height:100%; display:none;" class="bg-white"></div>
                 <div id="rfq-gen-root" style="width:100%; height:100%; display:none; background-color: #f8f9fa; color: #212529; overflow-y: auto;"></div>
+                <div id="admin-panel-root" style="width:100%; height:100%; display:none;" class="bg-white"></div>
                 <iframe id="app-frame" name="app-frame" src=""
                     style="width:100%; height:100%; border:0; display:none;" class="bg-white"></iframe>
             </div>
@@ -247,6 +252,7 @@
     <script type="module" src="../vendor_quoting/App.js"></script>
     <script type="module" src="../vacation/VacationApp.js"></script>
     <script type="module" src="../rfq_gen/main.js"></script>
+    <script type="module" src="../admin_panel/main.js"></script>
     <script src="./home.js"></script>
 </body>
 
